<resources>
    <string name="app_name">UnCrack</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_or_username">Email or UserName</string>
    <string name="password">Password</string>
    <string name="company">Company</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="mailTo">mailto:uncrack.manager@gmail.com?Subject=Your%20feedback%20is%20important%20to%20us%21</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="add_password">Password</string>
    <string name="select_the_account">Select</string>
    <string name="edit_email">Email <font color='#FF0000'>*</font></string>
    <string name="edit_username">UserName</string>
    <string name="edit_password">Password <font color='#FF0000'>*</font></string>
    <string name="v2.0.0">v2.0.0</string>
    <string name="description_about_the_option">Description about the option</string>
    <string name="Password_Strength">Check Password Strength</string>
    <string name="password_strength_des">You can check the strength of the password that you have saved for any particular account.</string>
    <string name="share_details">Share Details</string>
    <string name="credentials_backups">Credentials Backups</string>
    <string name="backup_credentials_to_google_drive">Backup credentials to Google Drive</string>
    <string name="security">Security</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="share_app">Share App</string>
    <string name="share_app_with_others">Share app with others</string>
    <string name="feedback">Feedback</string>
    <string name="tell_us_your_perspective_after_using_the_app">Tell us your perspective after using the app</string>
    <string name="about_the_app">About the app</string>
    <string name="about">About the app</string>
    <string name="save_details">Save</string>
    <string name="discard">Discard changes</string>
    <string name="discard_text">Are you sure you discard changes?</string>
    <string name="continue_editing">Continue editing</string>
    <string name="continue_txt">Continue</string>
    <string name="unlock_uncrack">Unlock UnCrack</string>
    <string name="note">Note <font color='#808080'> (optional)</font></string>
    <string name="category">Category</string>
    <string name="hint_email">youremail123@gmail.com</string>
    <string name="hint_password">********</string>
    <string name="hint_note">yourNote</string>
    <string name="hint_year">Year</string>
    <string name="hint_month">Month</string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_card_holder_name">Card Holder Name</string>
    <string name="hint_cvv">CVV</string>
    <string name="saving_changes">Saving changes...</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="update_text">Are you sure you want save the updated credentials?</string>
    <string name="save_changes">Save Changes</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="save_text">Are you sure you want save?</string>
    <string name="update_available">Update available</string>
    <string name="would_you_like_to_update">Would you like to update it now?</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="add_your_card_details">Add your Card Details</string>
    <string name="select_your_card">Select your Card</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">****</string>
    <string name="expiry_date">EXPIRY DATE</string>
    <string name="card_holder_name">CARD HOLDER NAME</string>
    <string name="add_your_details">Add your Details</string>
    <string name="DISCARD">Discard</string>
    <string name="please_enter_the_cvv">Please Enter the CVV.</string>
    <string name="please_enter_the_card_number">Please Enter the Card Number.</string>
    <string name="please_enter_the_card_holder_name">Please Enter the Card Holder Name.</string>
    <string name="please_enter_the_email_id">Please Enter the Email ID</string>
    <string name="please_enter_the_password">Please Enter the Password</string>
    <string name="my_cards">My Cards</string>
    <string name="you_have_no_cards_saved_till_now">You have no Cards saved till now</string>
    <string name="empty_list">Empty List</string>
    <string name="my_passwords">My passwords</string>
    <string name="generator">Generator</string>
    <string name="password_generator">Password Generator</string>
    <string name="include_numbers">Include numbers</string>
    <string name="include_lowercase_letters">Include lowercase letters</string>
    <string name="include_uppercase_letters">Include uppercase letters</string>
    <string name="include_symbols">Include symbols</string>
    <string name="password_length">Password Length</string>
    <string name="wait_a_second">Wait a Second</string>
    <string name="are_you_sure">Are you sure you want to share your credentials with other\'s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="made_with_v1_2">Made with ♥ v2.0.0</string>
    <string name="settings">Settings</string>
    <string name="about_app_text">I see a lot of people are tried of memorizing all their passwords, me also sometimes forgot the login credentials. So, after thinking about this situations, this app is build, to help user\'s to store their passwords and other information in a secured and organized manner.</string>
    <string name="about_app_text_second">UnCrack is a offline password manager that securely stores all your login credentials and other important information, so you never have to worry about forgetting passwords or searching for lost information. Keep your digital life organized and protected with UnCrack.</string>
    <string name="security_screen">Security</string>
    <string name="unlock_with_fingerprint">Unlock with Fingerprint</string>
    <string name="update_your_master_key">Update your Master Key</string>
    <string name="set_up_a_master_key_to_secure_all_your_credentials">Set up a master key to secure your credentials with end-to-end encryption</string>
    <string name="master_key">Master Key</string>
    <string name="master_password">Master Password</string>
    <string name="end_to_end_encryption">End-to-End Encryption</string>
    <string name="confirm_master_key">Confirm Master Key</string>
    <string name="confirm_master_password">Confirm Master Password</string>
    <string name="enter_your_master_key_to_continue">Kindly provide your master key to proceed 👋.</string>
    <string name="save_master_key">Save Master Key</string>
    <string name="master_key_cannot_be_blank">Please enter your Master Key</string>
    <string name="at_least_6_letter_long">Your master key should be at least 6 letters long</string>
    <string name="incorrect_password">Incorrect Password! Please check your Master Key</string>
    <string name="change_master_key">Change Master Key</string>
    <string name="old_password">Old Master Key</string>
    <string name="create_master_key">Create new Master Key</string>
    <string name="old_master_key_cannot_be_blank">Old Master Key cannot be blank</string>
    <string name="old_master_key_is_incorrect">The Old Master Key is incorrect</string>
    <string name="name">Name</string>
    <string name="store_your_credentials_safely">Store your credentials safely</string>
    <string name="type_a_password">Type a password</string>
    <string name="confirm_master_key_cannot_be_blank">Please Enter your Master Key to confirm</string>
    <string name="enter_correct_master_key">Please enter the correct Master Key</string>
    <string name="master_key_matches">Master Key matches</string>
    <string name="search">Search...</string>
    <string name="add_icon">add_icon</string>
    <string name="image_logo">image_logo</string>
    <string name="add_a_new_password">Add a new password</string>
    <string name="new_password">New Password</string>
    <string name="password_information">Password Information</string>
    <string name="demo_note">Your note</string>
    <string name="demo_password">Your password</string>
    <string name="demo_username">Your username</string>
    <string name="demo_email">Your email</string>
    <string name="account_name">Account name</string>
    <string name="work">Work</string>
    <string name="social">Social</string>
    <string name="mail">Mail</string>
    <string name="others">Others</string>
    <string name="generate_password">Generate Password</string>
    <string name="generate">Generate</string>
    <string name="add_a_new_card">Add a new card</string>
    <string name="new_card">New Card</string>
    <string name="card_information">Card Information</string>
    <string name="card_name">Card Name</string>
    <string name="your_card_number">Your card number</string>
    <string name="card_number">Card Number</string>
    <string name="demo_master_key">Your Master Key</string>
    <string name="your_old_master_key">Your Old Master Key</string>
    <string name="your_new_master_key">Your new Master Key</string>
    <string name="enter_your_previous_master_key_to_confirm_it_is_really_you_who_wants_to_change_the_password">Enter your previous master key to confirm it is really you who wants to change the password</string>
    <string name="set_an_app_lock_master_key_to_secure_all_your_credentials">Set an app lock master key to secure all your credentials</string>
    <string name="remove_card">Remove Card</string>
    <string name="default_notification_channel_id">uncrack</string>
    <string name="information">Information</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="your_name">Your name</string>
    <string name="your_cvv">CVV</string>
    <string name="edit">Edit</string>
    <string name="expiry">Expiry Date</string>
    <string name="holder_name">Card Holder Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete your account?</string>
    <string name="logout">Logout?</string>
    <string name="email_header">Enter your email</string>
    <string name="email_hint">johndoe123@gmail.com</string>
    <string name="password_header">Enter your password</string>
    <string name="password_hint">****************</string>
    <string name="name_header">Enter your name</string>
    <string name="name_hint">John Doe</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="by_aritra_das">By Aritra Das 💙</string>
    <string name="save">Save</string>
    <string name="numbers">Numbers</string>
    <string name="uppercase_letters">Uppercase letters</string>
    <string name="lowercase_letters">Lowercase letters</string>
    <string name="special_symbols">Special symbols</string>
    <string name="include_following">Include following:</string>
    <string name="copy">Copy</string>
    <string name="backup">Backup</string>
    <string name="appearance">Appearance</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="update_master_password">Update Master Password</string>
    <string name="old_master_key">Old Master Key</string>
    <string name="new_master_key">New Master Key</string>
    <string name="password_generated_length">Password Length  %1$s</string>
</resources>