<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.master_key.CreateMasterKeyFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/clumsy"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bg"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/end_to_end_encryption"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:textSize="23sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:text="@string/set_up_a_master_key_to_secure_all_your_credentials"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/masterKey_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/master_key"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/masterKey"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_field"
            android:fontFamily="@font/dm_sans"
            android:hint="@string/demo_master_key"
            android:maxLines="1"
            android:paddingStart="14dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/accountNameHeader"
            app:layout_constraintStart_toStartOf="@+id/accountNameHeader"
            app:layout_constraintTop_toBottomOf="@+id/accountNameHeader"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/masterKeyHelperTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/dm_sans"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:visibility="gone"
            tools:text="Please Enter the First Name." />

        <TextView
            android:id="@+id/confirmMasterKey_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dm_sans_medium"
            android:text="Confirm Master Key"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/confirm_masterKey"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_field"
            android:fontFamily="@font/dm_sans"
            android:hint="@string/demo_master_key"
            android:maxLines="1"
            android:paddingStart="14dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@+id/accountNameHeader"
            app:layout_constraintStart_toStartOf="@+id/accountNameHeader"
            app:layout_constraintTop_toBottomOf="@+id/accountNameHeader"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/confirmMasterKeyHelperTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/dm_sans"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:visibility="gone"
            tools:text="Please Enter the First Name." />

        <include
            android:id="@+id/btnSaveMasterKey"
            layout="@layout/primary_progress_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>