<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragment.UpdateMasterKeyFragment">

    <LinearLayout
        android:id="@+id/changePasswordScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/enter_password"
                app:lottie_repeatMode="reverse" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/dm_sans_bold"
                android:gravity="center"
                android:text="@string/change_master_key"
                android:textColor="#343434"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutOldMasterKey"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginTop="50dp"
                    android:hint="@string/old_password"
                    android:textColorHint="@color/hint_color"
                    app:boxBackgroundColor="@color/white"
                    app:helperText="Enter your previous master key to confirm it is really you who wants to change the password"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/black"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="17sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/oldMasterKeyHelperTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:textColor="@color/red"
                    android:textSize="13sp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutOldMasterKey"
                    tools:text="Please Enter the First Name." />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutMasterKey"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_marginTop="35dp"
                    android:hint="@string/create_master_key"
                    android:textColorHint="@color/hint_color"
                    app:boxBackgroundColor="@color/white"
                    app:helperText="Set an app lock master key to secure all your credentials"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/black"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="17sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/updatedMasterKeyHelperTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:textColor="@color/red"
                    android:textSize="13sp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutMasterKey"
                    tools:text="Please Enter the First Name." />


                <include
                    android:id="@+id/btnUpdateMasterKey"
                    layout="@layout/primary_progress_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"/>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>